--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     padding: 20px;
     text-align: center;
     ">COM5961 Assignments</h1>
-    <a href="https://github.com/Wenjia-Song/Wenjia-Song.github.io/tree/master/assignment01">hahahahaah</a >
+   <img src="photo.jpg">
+   <a href="https://github.com/Wenjia-Song/Wenjia-Song.github.io/tree/master/assignment01">Assignment01</a >
 </body> 
 </html>
