--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     ">COM5961 Assignments</h1>
    <img src="photo.jpg">
    <a href="https://github.com/Wenjia-Song/Wenjia-Song.github.io/tree/master/assignment01">Assignment01</a >
+   <a href="https://Wenjia-Song.github.io/assignment02/assignment02.html">Assignment02</a >
 </body> 
 </html>
