--- a/index.html
+++ b/index.html
@@ -2,14 +2,25 @@
 <html>
 <head>
     <title>COM5961 Assignments</title>
+    <style type="text/css">
+        ul.navbar {
+        position: absolute; top: 8em;
+        left: 20em;
+        width: 15em }
+        h1 {
+        font-family: Helvetica, Geneva, Arial,
+        SunSans-Regular, sans-serif } </style>
 </head>
 <body>
     <h1 style="
     padding: 20px;
-    text-align: center;
     ">COM5961 Assignments</h1>
    <img src="photo.jpg">
-   <a href="https://github.com/Wenjia-Song/Wenjia-Song.github.io/tree/master/assignment01">Assignment01</a >
-   <a href="https://Wenjia-Song.github.io/assignment02/assignment02.html">Assignment02</a >
+   <ul
+class
+="navbar">
+   <li><a href="https://github.com/Wenjia-Song/Wenjia-Song.github.io/tree/master/assignment01">Assignment01</a >
+ <li><a href="https://Wenjia-Song.github.io/assignment02/assignment02.html">Assignment02</a >
+ </ul> 
 </body> 
 </html>
