--- a/assignment02/assignment02.html
+++ b/assignment02/assignment02.html
@@ -11,5 +11,6 @@
     <iframe class="airtable-embed" src="https://airtable.com/embed/shrCIiFGxCH7K4Zfl?backgroundColor=yellow&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
     <iframe title="2014 NBA Results" aria-label="chart" id="datawrapper-chart-0UUOt" src="https://datawrapper.dwcdn.net/0UUOt/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="823"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
     </script>
+    </script>
 </body> 
 </html>
