--- a/assignment03/assignment03.html
+++ b/assignment03/assignment03.html
@@ -14,14 +14,13 @@
 <body>
     <h1 style="
     padding: 20px;
-    ">COM5961 Assignments</h1>
+    ">Assignment03</h1>
    <img src="photo.jpg">
    <ul
 class
 ="navbar">
-   <li><a href="https://github.com/Wenjia-Song/Wenjia-Song.github.io/tree/master/assignment01">Assignment01</a >
-    <li><a href="https://Wenjia-Song.github.io/assignment02/assignment02.html">Assignment02</a >
-    <li><a href="https://Wenjia-Song.github.io/assignment03/assignment03.html">Assignment03</a >
+   <li><a href="https://airtable.com/shrsy1W0Y8MEtS9Jw">Keyword Research</a >
+ <li><a href="https://dev-rooftop-cafe.pantheonsite.io">My Website</a >
  </ul> 
 </body> 
 </html>
