--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ class
    <li><a href="https://github.com/Wenjia-Song/Wenjia-Song.github.io/tree/master/assignment01">Assignment01</a >
     <li><a href="https://Wenjia-Song.github.io/assignment02/assignment02.html">Assignment02</a >
     <li><a href="https://Wenjia-Song.github.io/assignment03/assignment03.html">Assignment03</a >
+    <li><a href="https://Wenjia-Song.github.io/assignment04/puzzle.html">Assignment04</a >
  </ul> 
 </body> 
 </html>
