--- a/assignment05/assignment05.html
+++ b/assignment05/assignment05.html
@@ -15,8 +15,9 @@
     ">Assignment05</h1>
     </div>
 
-    <div class="ui text container" style="margin-top: 40px;text-align: center;">
-     Show the data grouped by
+    <div class="ui text container" style="margin-top: 20px;text-align: center;">
+     <span>Show the data grouped by
+      <div>
       <div class="ui inline dropdown">
        <div class="text">
            Name
@@ -34,6 +35,8 @@
         </div>
       </div>
     </div>
+    </div>
+    </span>
 
 
     <div id="origin_chart" style="margin-top: 20px; margin-bottom: 40px;">
