--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ class
     <li><a href="https://Wenjia-Song.github.io/assignment03/assignment03.html">Assignment03</a >
     <li><a href="https://Wenjia-Song.github.io/assignment04/puzzle.html">Assignment04</a >
     <li><a href="https://Wenjia-Song.github.io/assignment05/assignment05.html">Assignment05</a >
+    <li><a href="https://www.figma.com/file/T6CkEht3X0lBgg3qiEkyLL/Design-and-Code-desktop?node-id=0%3A1">Figma Prototype (desktop)</a >
+    <li><a href="https://www.figma.com/file/3fwWRmyszGUaOHkGohSmhj/Design-%26Code-(mobile)?node-id=0%3A1">Figma Prototype (mobile)</a >
+    <li><a href="https://Wenjia-Song.github.io/assignment05/assignment06.html">Assignment06</a >
  </ul> 
 </body> 
 </html>
