--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@ class
     <li><a href="https://www.figma.com/file/3fwWRmyszGUaOHkGohSmhj/Design-%26Code-(mobile)?node-id=0%3A1">Figma Prototype (mobile)</a >
     <li><a href="https://Wenjia-Song.github.io/assignment06/assignment06.html">Assignment06</a >
     <li><a href="https://github.com/Wenjia-Song/Wenjia-Song.github.io/tree/master/assignment07">Assignment07</a>
+    <li><a href="https://github.com/Wenjia-Song/Wenjia-Song.github.io/tree/master/assignment07">Assignment08</a>
+    <li><a href="https://Wenjia-Song.github.io/天台胡同/homepage.html">Assignment09</a>
  </ul> 
 </body> 
 </html>
