--- a/index.html
+++ b/index.html
@@ -1,38 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
-    <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-K4QLJVQ');</script>
-    <!-- End Google Tag Manager -->
-
     <title>COM5961 Assignments</title>
     <style type="text/css">
+
         ul.navbar {
-        position: absolute; top: 8em;
+        position: center; top: 8em;
         left: 20em;
-        width: 15em }
+        width: 15em;
+        }   
         h1 {
         font-family: Helvetica, Geneva, Arial,
-        SunSans-Regular, sans-serif } </style>
+        SunSans-Regular, sans-serif} </style>
 </head>
 <body>
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K4QLJVQ"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    
-    <h1 style="
-    padding: 20px;
-    ">COM5961 Assignments</h1>
-   <img src="photo.jpg">
-   <ul
-class
-="navbar">
+    <h1 style="padding: 20px">COM5961 Assignments</h1>
+   <ul class="navbar">
     <li><a href="https://github.com/Wenjia-Song/Wenjia-Song.github.io/tree/master/assignment01">Assignment01</a >
     <li><a href="https://Wenjia-Song.github.io/assignment02/assignment02.html">Assignment02</a >
     <li><a href="https://Wenjia-Song.github.io/assignment03/assignment03.html">Assignment03</a >
@@ -44,6 +27,6 @@ class
     <li><a href="https://github.com/Wenjia-Song/Wenjia-Song.github.io/tree/master/assignment07">Assignment07</a>
     <li><a href="https://github.com/Wenjia-Song/Wenjia-Song.github.io/tree/master/assignment07">Assignment08</a>
     <li><a href="https://Wenjia-Song.github.io/天台胡同/homepage.html">Assignment09</a>
- </ul> 
+  </ul>
 </body> 
 </html>
