--- a/天台胡同/静水 StillWater.html
+++ b/天台胡同/静水 StillWater.html
@@ -8,7 +8,7 @@
     <!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>天台胡同</title>
+	<title>静水 StillWater</title>
 	<meta name="description" content="Free Responsive Html5 Css3 Templates">
 	<meta name="author" content="">
 	
@@ -64,12 +64,12 @@
 					<div class="col-1-2">
 						<div class="wrap-col">
 							<h1>Welcome To<br><span>静水 StillWater</span></h1>
-							<p class="lead">秋日的午后，豆蔻年华的你。</p>
-							<p>瑞典人对待甜面包可谓极其用心，小豆蔻面包就是其代表美食之一，以至于瑞典人迁徙到哪里，哪里就飘散着豆蔻馥郁的香气。The Bake Shop 经典小豆蔻面包，采用瑞典原始工艺，配合进口豆蔻和优质黄油，给你最地道的北欧体验。</p>
-							<blockquote><p style="color: #111"> 镶嵌着细碎石子的墙壁，在和煦阳光下折射出静谧和温暖。地方不是很大，但午后世界都装得下。</p></blockquote>
-							<p>营业时间：10:00-18:00</p>
-							<p>地址：宝钞胡同63号福荣记二楼</p>
-							<p>电话：18401290854<p>
+							<p class="lead">静水而有流深，心素方能远达。</p>
+							<p>Dirty 口感浓郁醇厚，回味悠长。默认使用的是冰博克，混合海盐，也可以换成全脂奶。咖啡和牛奶没有过度融合，但也没有格格不入，是一款会让人记住的味道。初冬季节，一本书一杯 dirty，静水伴你一整个温暖的下午。</p>
+							<blockquote><p style="color: #111">咖啡香不在深巷，闹市中难得的静谧之处。水云堂望天一方，二楼天台豁然开朗。</p></blockquote>
+							<p>营业时间：10:00-20:00</p>
+							<p>地址：鼓楼东大街69号</p>
+							<p>电话：18600498907<p>
 						</div>
 					</div>
 					<div class="col-1-2">
