--- a/天台胡同/location.html
+++ b/天台胡同/location.html
@@ -47,7 +47,6 @@
     
 </head>
 <body>
-<header>
 <div class="wrap-body">
 		<nav class="wrap-menu">
 			<div class="zerogrid">
@@ -57,7 +56,7 @@
 					<li><a href="#div1">本期精选</a></li>
 					<li><a href="#div3">探寻心选 ∨<i class="fa fa-chevron-down"></i></a>
 						<ul>
-					        <li><a href="location.html">地点 ><i class="fa fa-chevron-right" style="margin: 2px 3px 2px;"></i></a>
+					        <li><a href="#">地点 ><i class="fa fa-chevron-right" style="margin: 2px 3px 2px;"></i></a>
 							    <ul>
 									<li><a href="阜成门.html">阜成门/地安门</a></li>
 									<li><a href="前门.html">前门/大栅栏</a></li>
@@ -79,30 +78,15 @@
 				</ul>
 			</div>
 		</nav>
-		<div class="wrap-header">
-			<div class="main-header">
-				<div class="zerogrid">
-					<!-- Static Header -->
-					<div class="header-text hidden-xs">
-						<div class="t-center">
-							<span>Bringing People Together in Beijing Hutong</span>
-							<h1>天台胡同</h1>
-							<p>胡同下午茶爱好者的聚集地<p>
-							<a href="#div1" class="btn btn-primary btn-xl page-scroll">开始探索</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
-    <div id="div1"></div>
 	<!-----------------content-box-3-------------------->
 	<section class="content-box box-3">
 		<div class="zerogrid">
 			<div class="wrap-box"><!--Start Box-->
 				<div class="heading">
 					<div class="row">
-						<h2>本期精选 Selection</h2>
+						<h2>地点</h2>
+						<div class="row">
+					    </div>
 					</div>
 				</div>
 			</div>
@@ -112,42 +96,9 @@
  <!-----------------content-box-4-------------------->
  <section class="content-box boxstyle-1 box-4">
 	<div class="zerogrid">
-		<div class="wrap-box"><!--Start Box-->
-			<div class="row"><!--Start Box-->
-				<div class="col-1-3">
-					<div class="wrap-col item">
-						<div class="portfolio-box">
-							<a href="The Bake Shop.html"><img src="images/ava-4.jpg"alt=""></a>
-						</div>
-						<div class="item-content">
-							<h3><a href="The Bake Shop.html">The Bake Shop</a></h3>
-							<span>经典 - 小豆蔻</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-1-3">
-					<div class="wrap-col item">
-						<div class="portfolio-box">
-							<a href="静水 StillWater.html"><img src="images/ava-5.jpg"alt=""></a>
-						</div>
-						<div class="item-content">
-							<h3><a href="静水 StillWater.html">静水 StillWater</a></h3>
-							<span>新品 - Dirty</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-1-3">
-					<div class="wrap-col item">
-						<div class="portfolio-box">
-							<a href="福叁咖啡.html"><img src="images/ava-6.jpg"alt=""></a>
-						</div>
-						<div class="item-content">
-							<h3><a href="福叁咖啡.html">福叁咖啡</a></h3>
-							<span>应季 - 杏儿</span>
-							<div id="div3"></div>
-						</div>
-					</div>
-				</div>
+		<div class="wrap-box">
+			<div class="row">
+				<iframe class="airtable-embed" src="https://airtable.com/embed/shrcBGL83D11sx4sl?backgroundColor=yellow&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
 			</div>
 		</div>
 	</div>
@@ -158,97 +109,20 @@
 		<div class="wrap-box">
 			<div class="heading2">
 				<div class="row">
-					<h2>探寻心选 Search</h2>
+					<h2>美食地图</h2>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
 
-	<!-----------------content-box-2-------------------->
-		<section class="content-box boxstyle-2 box-2">
-			<div class="zerogrid" style="width: 100%;">
-				<div class="row wrap-box"><!--Start Box-->
-					<div class="col-1-4">
-						<a class="portfolio-box zoom-effect" href="location.html">
-							<img src="images/1.jpg" class="img-responsive" alt="">
-							<div class="portfolio-box-caption">
-								<div class="portfolio-box-caption-content">
-									<div class="project-name">
-										地点
-									</div>
-									<div class="project-category">
-										#Location
-									</div>
-									<div class="project-detail">
-										<span>从前门到后海</span>
-										<span>你想去的地方这里都有</span>
-									</div>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="col-1-4">
-						<a class="portfolio-box zoom-effect" href="single.html">
-							<img src="images/2.jpg" class="img-responsive" alt="">
-							<div class="portfolio-box-caption">
-								<div class="portfolio-box-caption-content">
-									<div class="project-name">
-										菜单
-									</div>
-									<div class="project-category">
-										#Menu
-									</div>
-									<div class="project-detail">
-										<span>天台咖啡馆不只咖啡</span>
-										<span>从这里开始探索美食</span>
-									</div>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="col-1-4">
-						<a class="portfolio-box zoom-effect" href="single.html">
-							<img src="images/3.jpg" class="img-responsive" alt="">
-							<div class="portfolio-box-caption">
-								<div class="portfolio-box-caption-content">
-									<div class="project-name">
-										价格
-									</div>
-									<div class="project-category">
-										#Price
-									</div>
-									<div class="project-detail">
-										<span>无论作出何种选择</span>
-										<span>适合的总是最好的</span>
-									</div>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="col-1-4">
-						<a class="portfolio-box zoom-effect" href="single.html">
-							<img src="images/1-1.jpg" class="img-responsive" alt="">
-							<div class="portfolio-box-caption">
-								<div class="portfolio-box-caption-content">
-									<div class="project-name">
-										评价
-									</div>
-									<div class="project-category">
-										#Comments
-									</div>
-									<div class="project-detail">
-										<span>真实与亲历相伴</span>
-										<span>从不让你白跑任何一趟</span>
-									</div>
-								</div>
-							</div>
-						</a>
-					</div>
-				</div>
+<!-----------------content-box-2-------------------->
+	<section class="content-box boxstyle-2 box-2">
+		<div class="zerogrid" style="width: 100%;">
+			<div class="row wrap-box">
 			</div>
-		</section>
-	<div id="div2"></div>
+		</div>
+	</section>
 <!-----------------content-box-3-------------------->
 <section class="content-box box-3">
 	<div class="zerogrid">
