--- a/天台胡同/南锣.html
+++ b/天台胡同/南锣.html
@@ -8,7 +8,7 @@
     <!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>The Bake Shop</title>
+	<title>天台胡同</title>
 	<meta name="description" content="Free Responsive Html5 Css3 Templates">
 	<meta name="author" content="">
 	
@@ -48,49 +48,79 @@
 </head>
 <body>
 <div class="wrap-body">
-	<!--////////////////////////////////////Container-->
-	<section id="container">
-		<div class="wrap-container zerogrid">
-			<div class="crumbs">
-				<ul>
-					<li><a href="homepage.html">Return</a></li>
-					<li><a href="The Bake Shop.html">The Bake Shop</a></li>
+		<nav class="wrap-menu">
+			<div class="zerogrid">
+				<div id="menu-trigger">Menu</div>    
+				<ul id="menu" style="display: none;">
+					<li><a href="homepage.html">首页</a></li>
+					<li><a href="#div1">本期精选</a></li>
+					<li><a href="#div3">探寻心选 ∨<i class="fa fa-chevron-down"></i></a>
+						<ul>
+					        <li><a href="#">地点 ><i class="fa fa-chevron-right" style="margin: 2px 3px 2px;"></i></a>
+							    <ul>
+									<li><a href="阜成门.html">阜成门/地安门</a></li>
+									<li><a href="前门.html">前门/大栅栏</a></li>
+									<li><a href="南锣.html">南锣鼓巷/什刹海</a></li>
+									<li><a href="东直门.html">东直门/雍和宫</a></li>
+							    </ul>
+						    <li><a href="#">菜单 ><i class="fa fa-chevron-right" style="margin: 2px 3px 2px;"></i></a>
+							<ul>
+							    <li><a href="#">咖啡</a></li>
+							    <li><a href="#">茶</a></li>
+								<li><a href="#">甜品</a></li>
+								<li><a href="#">小吃</a></li>
+							</ul>	
+							<li><a href="#">价格</a></li>
+							<li><a href="#">评价</a></li>
+						</ul>
+					<li><a href="#div2">关于我们</a></li>	
+					<li><a href="#div2">联系我们</a></li>
 				</ul>
 			</div>
-			<!-----------------content-box-1-------------------->
-		<section class="content-box boxstyle-1 box-1">
-			<div class="zerogrid">
-				<div class="row wrap-box"><!--Start Box-->
-					<div class="col-1-2">
-						<div class="wrap-col">
-							<h1>Welcome To<br><span>The Bake Shop</span></h1>
-							<p class="lead">频频袅袅十三余，豆蔻梢头二月初。</p>
-							<p>瑞典人对甜面包极其用心，而小豆蔻正是瑞典的代表面包之一。瑞典人迁徙到哪里，哪里就飘散着豆蔻馥郁的香气。The Bake Shop 经典小豆蔻面包，采用瑞典原始工艺，配合进口豆蔻和优质黄油，给你最地道的北欧体验。</p>
-							<blockquote><p style="color: #111"> 镶嵌着细碎石子的墙壁，在和煦阳光下折射出静谧和温暖。地方不是很大，但午后世界都装得下。</p></blockquote>
-							<p>营业时间：10:00-18:00</p>
-							<p>地址：宝钞胡同63号福荣记二楼</p>
-							<p>电话：18401290854<p>
-						</div>
-					</div>
-					<div class="col-1-2">
+		</nav>
+	<!-----------------content-box-3-------------------->
+	<section class="content-box box-3">
+		<div class="zerogrid">
+			<div class="wrap-box"><!--Start Box-->
+				<div class="heading">
+					<div class="row">
+						<h2>南锣鼓巷/什刹海</h2>
 						<div class="row">
-							<div class="col-1-2">
-								<div class="wrap-col">
-									<img src="images/home-2.jpg">
-									<img src="images/home-4.jpg">
-								</div>
-							</div>
-							<div class="col-1-2">
-								<div class="wrap-col">
-									<img src="images/home-3.jpg">
-									<img src="images/home-5.jpg">
-								</div>
-							</div>
-						</div>
+					    </div>
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
+	</section>
+
+ <!-----------------content-box-4-------------------->
+ <section class="content-box boxstyle-1 box-4">
+	<div class="zerogrid">
+		<div class="wrap-box">
+			<div class="row">
+				<iframe class="airtable-embed" src="https://airtable.com/embed/shr63trb2hyt3kTKS?backgroundColor=yellow&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+			</div>
+		</div>
+	</div>
+</section>
+<!-----------------content-box-3-------------------->
+<section class="content-box box-4">
+	<div class="zerogrid">
+		<div class="wrap-box">
+			<div class="heading2">
+				<div class="row">
+					<h2>美食地图</h2>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<!-----------------content-box-2-------------------->
+	<section class="content-box boxstyle-2 box-2">
+		<div class="zerogrid" style="width: 100%;">
+			<div class="row wrap-box">
+			</div>
 		</div>
 	</section>
 
