--- a/assignment05/assignment05.html
+++ b/assignment05/assignment05.html
@@ -16,27 +16,24 @@
     </div>
 
     <div class="ui text container" style="margin-top: 20px;text-align: center;">
-     <span>Show the data grouped by
-      <div>
-      <div class="ui inline dropdown">
-       <div class="text">
-           Name
-       </div>
-      <i class="dropdown icon"></i>
-      <div class="menu">
-        <div id="namedata" class="item">
-            Name
-        </div>
-        <div id="regiondata" class="item">
-            Region
-        </div>
-         <div id="pricedata" class="item">
+      <span>Show the data grouped by
+        <div class="ui inline dropdown">
+          <div class="text">Name</div>
+          <i class="dropdown icon"></i>
+          <div class="menu">
+            <div id="namedata" class="item">
+              Name
+            </div>
+            <div id="regiondata" class="item">
+              Region
+            </div>
+            <div id="pricedata" class="item">
              Price
-        </div>
-      </div>
+            </div>
+          </div>
+        <div>
+      </span>
     </div>
-    </div>
-    </span>
 
 
     <div id="origin_chart" style="margin-top: 20px; margin-bottom: 40px;">
