--- a/天台胡同/location.html
+++ b/天台胡同/location.html
@@ -98,22 +98,26 @@
 	<div class="zerogrid">
 		<div class="wrap-box">
 			<div class="row">
-				<iframe class="airtable-embed" src="https://airtable.com/embed/shrcBGL83D11sx4sl?backgroundColor=yellow&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+			   <iframe class="airtable-embed" src="https://airtable.com/embed/shrcBGL83D11sx4sl?backgroundColor=yellow&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
 			</div>
 		</div>
 	</div>
 </section>
 <!-----------------content-box-3-------------------->
-<section class="content-box box-4">
+<section class="content-box box-3">
 	<div class="zerogrid">
-		<div class="wrap-box">
-			<div class="heading2">
+		<div class="wrap-box"><!--Start Box-->
+			<div class="heading">
 				<div class="row">
 					<h2>美食地图</h2>
+					<div class="row">
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+</section>
+
 </section>
 
 <!-----------------content-box-2-------------------->
