--- a/天台胡同/前门.html
+++ b/天台胡同/前门.html
@@ -103,13 +103,16 @@
 		</div>
 	</div>
 </section>
+
 <!-----------------content-box-3-------------------->
-<section class="content-box box-4">
+<section class="content-box box-3">
 	<div class="zerogrid">
-		<div class="wrap-box">
-			<div class="heading2">
+		<div class="wrap-box"><!--Start Box-->
+			<div class="heading">
 				<div class="row">
 					<h2>美食地图</h2>
+					<div class="row">
+					</div>
 				</div>
 			</div>
 		</div>
