--- a/天台胡同/homepage.html
+++ b/天台胡同/homepage.html
@@ -55,23 +55,23 @@
 				<ul id="menu" style="display: none;">
 					<li><a href="homepage.html">首页</a></li>
 					<li><a href="#div1">本期精选</a></li>
-					<li><a href="#div3">探寻心选 ∨<i class="fa fa-chevron-down"></i></a>
+					<li><a href="#div3">探寻心选 ▼<i class="fa fa-chevron-down"></i></a>
 						<ul>
-					        <li><a href="location.html">地点 ><i class="fa fa-chevron-right" style="margin: 2px 3px 2px;"></i></a>
+					        <li><a href="location.html">地点 ▶<i class="fa fa-chevron-right" style="margin: 2px 3px 2px;"></i></a>
 							    <ul>
 									<li><a href="阜成门.html">阜成门/地安门</a></li>
 									<li><a href="前门.html">前门/大栅栏</a></li>
 									<li><a href="南锣.html">南锣鼓巷/什刹海</a></li>
 									<li><a href="东直门.html">东直门/雍和宫</a></li>
 							    </ul>
-						    <li><a href="#">菜单 ><i class="fa fa-chevron-right" style="margin: 2px 3px 2px;"></i></a>
+						    <li><a href="#">菜单 ▶<i class="fa fa-chevron-right" style="margin: 2px 3px 2px;"></i></a>
 							<ul>
 							    <li><a href="#">咖啡</a></li>
 							    <li><a href="#">茶</a></li>
 								<li><a href="#">甜品</a></li>
 								<li><a href="#">小吃</a></li>
 							</ul>	
-							<li><a href="#">价格</a></li>
+							<li><a href="price.html">价格</a></li>
 							<li><a href="#">评价</a></li>
 						</ul>
 					<li><a href="#div2">关于我们</a></li>	
@@ -265,7 +265,7 @@
 				</div>
 				<div class="col-1-2">
 					<div class="wrap-col">
-						<p>The real escape does not happen at the feet, but in the heart. Or, there is another option - not to go to the edge, but to the very center of the city. Here, in the coffee shops, tea houses and bars in the hutongs, I find people like me who constantly struggle in life still would like to discover the beauty of life and choose to love it without hesitation. Finally, we are able to share the sky with pigeons on the roof covered with ginkgo leaves.</p>
+						<p>The real escape does not happen at the feet, but in the heart. Or, there is another option - not to go to the edge, but to the very center of the city. Here, in the coffee shops, tea houses and bars in the hutongs, I find people like me who constantly struggle in life still would like to discover the beauty of it and choose to love it without hesitation. Finally, we are able to share the sky with pigeons on the roof covered with ginkgo leaves.</p>
 					</div>
 				</div>
 			</div>
