--- a/天台胡同/location.html
+++ b/天台胡同/location.html
@@ -85,13 +85,19 @@
 				<div class="heading">
 					<div class="row">
 						<h2>地点</h2>
-						<div class="row">
-					    </div>
+						<select id="" onchange="window.location=this.value">
+							<option>全部区域（二环）</option>
+							<option value="阜成门.html">阜成门/地安门</option>
+							<option value="前门.html">前门/大栅栏</option> 
+							<option value="南锣.html">南锣鼓巷/什刹海</option>
+							<option value="东直门.html">东直门/雍和宫</option>
+						</select>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
 
  <!-----------------content-box-4-------------------->
  <section class="content-box boxstyle-1 box-4">
@@ -103,6 +109,7 @@
 		</div>
 	</div>
 </section>
+
 <!-----------------content-box-3-------------------->
 <section class="content-box box-3">
 	<div class="zerogrid">
@@ -116,8 +123,6 @@
 			</div>
 		</div>
 	</div>
-</section>
-
 </section>
 
 <!-----------------content-box-2-------------------->
