--- a/天台胡同/前门.html
+++ b/天台胡同/前门.html
@@ -84,14 +84,20 @@
 			<div class="wrap-box"><!--Start Box-->
 				<div class="heading">
 					<div class="row">
-						<h2>前门/大栅栏</h2>
-						<div class="row">
-					    </div>
+						<h2>地点</h2>
+						<select id="" onchange="window.location=this.value">
+							<option>前门/大栅栏</option>
+							<option value="阜成门.html">阜成门/地安门</option>
+							<option value="南锣.html">南锣鼓巷/什刹海</option>
+							<option value="东直门.html">东直门/雍和宫</option>
+							<option value="前门.html">全部区域（二环）</option> 
+						</select>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
 
  <!-----------------content-box-4-------------------->
  <section class="content-box boxstyle-1 box-4">
