--- a/天台胡同/price.html
+++ b/天台胡同/price.html
@@ -84,14 +84,9 @@
 			<div class="wrap-box"><!--Start Box-->
 				<div class="heading">
 					<div class="row">
-						<h2>地点</h2>
-						<select id="" onchange="window.location=this.value">
-							<option>南锣鼓巷/什刹海</option>
-							<option value="阜成门.html">阜成门/地安门</option>
-							<option value="前门.html">前门/大栅栏</option> 
-							<option value="东直门.html">东直门/雍和宫</option>
-							<option value="location.html">全部区域（二环）</option>
-						</select>
+						<h2>价格</h2>
+						<div class="row">
+					    </div>
 					</div>
 				</div>
 			</div>
@@ -103,7 +98,7 @@
 	<div class="zerogrid">
 		<div class="wrap-box">
 			<div class="row">
-				<iframe class="airtable-embed" src="https://airtable.com/embed/shr63trb2hyt3kTKS?backgroundColor=yellow&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+				<iframe class="airtable-embed" src="https://airtable.com/embed/shr0De1jGTcLt4dcX?backgroundColor=yellow&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
 			</div>
 		</div>
 	</div>
