--- a/天台胡同/阜成门.html
+++ b/天台胡同/阜成门.html
@@ -84,15 +84,19 @@
 			<div class="wrap-box"><!--Start Box-->
 				<div class="heading">
 					<div class="row">
-						<h2>阜成门/地安门</h2>
-						<div class="row">
-					    </div>
+						<h2>地点</h2>
+						<select id="" onchange="window.location=this.value">
+							<option>阜成门/地安门</option>
+							<option value="前门.html">前门/大栅栏</option> 
+							<option value="南锣.html">南锣鼓巷/什刹海</option>
+							<option value="东直门.html">东直门/雍和宫</option>
+							<option value="location.html">全部区域（二环）</option>
+						</select>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-
  <!-----------------content-box-4-------------------->
  <section class="content-box boxstyle-1 box-4">
 	<div class="zerogrid">
