--- a/天台胡同/homepage.html
+++ b/天台胡同/homepage.html
@@ -208,7 +208,7 @@
 						</a>
 					</div>
 					<div class="col-1-4">
-						<a class="portfolio-box zoom-effect" href="single.html">
+						<a class="portfolio-box zoom-effect" href="price.html">
 							<img src="images/3.jpg" class="img-responsive" alt="">
 							<div class="portfolio-box-caption">
 								<div class="portfolio-box-caption-content">
