--- a/天台胡同/release.html
+++ b/天台胡同/release.html
@@ -8,7 +8,7 @@
     <!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>静水 StillWater</title>
+	<title>天台胡同</title>
 	<meta name="description" content="Free Responsive Html5 Css3 Templates">
 	<meta name="author" content="">
 	
@@ -47,83 +47,26 @@
     
 </head>
 <body>
-<div class="wrap-body">
-	<!--////////////////////////////////////Container-->
-	<section id="container">
-		<div class="wrap-container zerogrid">
-			<div class="crumbs">
-				<ul>
-					<li><a href="homepage.html">首页</a></li>
-					<li><a href="The Bake Shop.html">静水 StillWater</a></li>
-				</ul>
-			</div>
-			<!-----------------content-box-1-------------------->
-		<section class="content-box boxstyle-1 box-1">
-			<div class="zerogrid">
-				<div class="row wrap-box"><!--Start Box-->
-					<div class="col-1-2">
-						<div class="wrap-col">
-							<h1>Welcome To<br><span>静水 StillWater</span></h1>
-							<p class="lead">静水而有流深，心素方能远达。</p>
-							<p>Dirty 口感浓郁醇厚，回味悠长。默认使用的是冰博克，混合海盐，也可以换成全脂奶。咖啡和牛奶没有过度融合，但也没有格格不入，是一款会让人记住的味道。初冬季节，一本书一杯 dirty，静水伴你一整个温暖的下午。</p>
-							<blockquote><p style="color: #111">咖啡香不在深巷，闹市中难得的静谧之处。水云堂望天一方，二楼天台豁然开朗。</p></blockquote>
-							<p>营业时间：10:00-20:00</p>
-							<p>地址：鼓楼东大街69号</p>
-							<p>电话：18600498907<p>
-						</div>
-					</div>
-					<div class="col-1-2">
-						<div class="row">
-							<div class="col-1-2">
-								<div class="wrap-col">
-									<img src="images/water-1.jpg">
-									<img src="images/water-2.jpg">
-								</div>
-							</div>
-							<div class="col-1-2">
-								<div class="wrap-col">
-									<img src="images/water-3.jpg">
-									<img src="images/water-4.jpg">
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		</div>
-	</section>
 
-<!--////////////////////////////////////Footer-->
-<footer>
-	
+		<!--////////////////////////////////////Container-->
+			<section id="container">
+				<div class="wrap-container zerogrid">
+		<div class="crumbs">
+			<ul>
+				<li><a href="comment.html">评论</a></li>
+				<li><a href="release.html">发布评论</a></li>
+			</ul>
+		</div>
+ <!-----------------content-box-4-------------------->
+ <section class="content-box boxstyle-1 box-4">
 	<div class="zerogrid">
-		<div class="wrap-footer">
+		<div class="wrap-box">
 			<div class="row">
-				<div class="col-1-2 col-footer-2">
-					<div class="wrap-col">
-						<h3 class="widget-title">联系我们 Contact</h3>
-							<p>电话 Tel: 13749859545</p>
-							<p>电子邮件 Email: 743734634@gmail.com</p>
-							<p>地址：北京市海淀区西三环北路2号创业中心</p>
-							<p>Address: 2 Xisanhuan North Road, Haidian District, Beijing</p>
-					</div>
-				</div>
-				<div class="col-1-2 col-footer-3">
-					<div class="wrap-col">
-						<h3 class="widget-title">订阅 Subcribe</h3>
-						<p>邮件订阅网站更新，精彩内容随时查看。Subscribe to our daly newsletter now.</p>
-						<p>电子邮件 Email address:</p>
-						<form action="#" method="post">
-							<input type="text" name="your-name" value="" size="40" placeholder="Your Email" />
-							<input type="submit" value="OK" class="button button-subcribe" />
-						</form>
-					</div>
-				</div>
-			</div>
+				<iframe class="airtable-embed" src="https://airtable.com/embed/shrr1WFhzTbUYApoH?backgroundColor=yellow" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
 		</div>
 	</div>
-</footer>
+</section>
+
 
 	<!-- Js Menu -->
 	<script src="js/jquery183.min.js"></script>
