--- a/天台胡同/homepage.html
+++ b/天台胡同/homepage.html
@@ -72,7 +72,7 @@
 								<li><a href="#">小吃</a></li>
 							</ul>	
 							<li><a href="price.html">价格</a></li>
-							<li><a href="#">评价</a></li>
+							<li><a href="comment.html">评价</a></li>
 						</ul>
 					<li><a href="#div2">关于我们</a></li>	
 					<li><a href="#div2">联系我们</a></li>
@@ -227,7 +227,7 @@
 						</a>
 					</div>
 					<div class="col-1-4">
-						<a class="portfolio-box zoom-effect" href="single.html">
+						<a class="portfolio-box zoom-effect" href="comment.html">
 							<img src="images/1-1.jpg" class="img-responsive" alt="">
 							<div class="portfolio-box-caption">
 								<div class="portfolio-box-caption-content">
