--- a/天台胡同/comment.html
+++ b/天台胡同/comment.html
@@ -98,6 +98,8 @@
 		<div class="wrap-box">
 			<div class="row">
 				<iframe class="airtable-embed" src="https://airtable.com/embed/shrsOra8W39hEG2Xg?backgroundColor=yellow&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+				<div class="header-text hidden-xs">
+				<a href="release.html" class="btn btn-primary btn-xl page-scroll">发表我的</a></div>
 			</div>
 		</div>
 	</div>
