--- a/天台胡同/小吃.html
+++ b/天台胡同/小吃.html
@@ -81,16 +81,16 @@
 	<!-----------------content-box-3-------------------->
 	<section class="content-box box-3">
 		<div class="zerogrid">
-			<div class="wrap-box"><!--Start Box-->
+			<div class="wrap-box">
 				<div class="heading">
 					<div class="row">
-						<h2>地点 Location</h2>
+						<h2>菜单 Menu</h2>
 						<select id="" onchange="window.location=this.value">
-							<option>东直门/雍和宫</option>
-							<option value="阜成门.html">阜成门/地安门</option>
-							<option value="前门.html">前门/大栅栏</option> 
-							<option value="南锣鼓巷.html">南锣鼓巷/什刹海</option>
-							<option value="location.html">全部区域（二环）</option>
+							<option>小吃</option>
+							<option value="茶.html">茶</option>
+							<option value="咖啡.html">咖啡</option> 
+							<option value="甜品.html">甜品</option>
+							<option value="menu.html">全部</option>
 						</select>
 					</div>
 				</div>
@@ -98,12 +98,13 @@
 		</div>
 	</section>
 
+
  <!-----------------content-box-4-------------------->
  <section class="content-box boxstyle-1 box-4">
 	<div class="zerogrid">
 		<div class="wrap-box">
 			<div class="row">
-				<iframe class="airtable-embed" src="https://airtable.com/embed/shrolEd22pr08nun3?backgroundColor=yellow&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+				<iframe class="airtable-embed" src="https://airtable.com/embed/shrDhZwDqnVcT6ioV?backgroundColor=yellow&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
 			</div>
 		</div>
 	</div>
@@ -112,7 +113,7 @@
 <!-----------------content-box-3-------------------->
 <section class="content-box box-3">
 	<div class="zerogrid">
-		<div class="wrap-box">
+		<div class="wrap-box"><!--Start Box-->
 			<div class="heading">
 				<div class="row">
 					<h2>美食地图</h2>
@@ -131,6 +132,7 @@
 			</div>
 		</div>
 	</section>
+
 <!--////////////////////////////////////Footer-->
 <footer>
 	
