--- a/天台胡同/homepage.html
+++ b/天台胡同/homepage.html
@@ -61,15 +61,15 @@
 							    <ul>
 									<li><a href="阜成门.html">阜成门/地安门</a></li>
 									<li><a href="前门.html">前门/大栅栏</a></li>
-									<li><a href="南锣.html">南锣鼓巷/什刹海</a></li>
+									<li><a href="南锣鼓巷.html">南锣鼓巷/什刹海</a></li>
 									<li><a href="东直门.html">东直门/雍和宫</a></li>
 							    </ul>
-						    <li><a href="#">菜单 ▶<i class="fa fa-chevron-right" style="margin: 2px 3px 2px;"></i></a>
+						    <li><a href="menu.html">菜单 ▶<i class="fa fa-chevron-right" style="margin: 2px 3px 2px;"></i></a>
 							<ul>
-							    <li><a href="#">咖啡</a></li>
-							    <li><a href="#">茶</a></li>
-								<li><a href="#">甜品</a></li>
-								<li><a href="#">小吃</a></li>
+							    <li><a href="咖啡.html">咖啡</a></li>
+							    <li><a href="茶.html">茶</a></li>
+								<li><a href="甜品.html">甜品</a></li>
+								<li><a href="小吃.html">小吃</a></li>
 							</ul>	
 							<li><a href="price.html">价格</a></li>
 							<li><a href="comment.html">评论</a></li>
@@ -189,7 +189,7 @@
 						</a>
 					</div>
 					<div class="col-1-4">
-						<a class="portfolio-box zoom-effect" href="single.html">
+						<a class="portfolio-box zoom-effect" href="menu.html">
 							<img src="images/2.jpg" class="img-responsive" alt="">
 							<div class="portfolio-box-caption">
 								<div class="portfolio-box-caption-content">
