--- a/天台胡同/咖啡.html
+++ b/天台胡同/咖啡.html
@@ -48,49 +48,49 @@
 </head>
 <body>
 <div class="wrap-body">
-		<nav class="wrap-menu">
-			<div class="zerogrid">
-				<div id="menu-trigger">Menu</div>    
-				<ul id="menu" style="display: none;">
-					<li><a href="homepage.html">首页</a></li>
-					<li><a href="#div1">本期精选</a></li>
-					<li><a href="#div3">探寻心选 ∨<i class="fa fa-chevron-down"></i></a>
-						<ul>
-					        <li><a href="#">地点 ><i class="fa fa-chevron-right" style="margin: 2px 3px 2px;"></i></a>
-							    <ul>
-									<li><a href="阜成门.html">阜成门/地安门</a></li>
-									<li><a href="前门.html">前门/大栅栏</a></li>
-									<li><a href="南锣.html">南锣鼓巷/什刹海</a></li>
-									<li><a href="东直门.html">东直门/雍和宫</a></li>
-							    </ul>
-						    <li><a href="#">菜单 ><i class="fa fa-chevron-right" style="margin: 2px 3px 2px;"></i></a>
+	<nav class="wrap-menu">
+		<div class="zerogrid">
+			<div id="menu-trigger">Menu</div>    
+			<ul id="menu" style="display: none;">
+				<li><a href="homepage.html">首页</a></li>
+				<li><a href="#div1">本期精选</a></li>
+				<li><a href="#div3">探寻心选 ▼<i class="fa fa-chevron-down"></i></a>
+					<ul>
+						<li><a href="location.html">地点 ▶<i class="fa fa-chevron-right" style="margin: 2px 3px 2px;"></i></a>
 							<ul>
-							    <li><a href="#">咖啡</a></li>
-							    <li><a href="#">茶</a></li>
-								<li><a href="#">甜品</a></li>
-								<li><a href="#">小吃</a></li>
-							</ul>	
-							<li><a href="#">价格</a></li>
-							<li><a href="#">评价</a></li>
-						</ul>
-					<li><a href="#div2">关于我们</a></li>	
-					<li><a href="#div2">联系我们</a></li>
-				</ul>
-			</div>
-		</nav>
+								<li><a href="阜成门.html">阜成门/地安门</a></li>
+								<li><a href="前门.html">前门/大栅栏</a></li>
+								<li><a href="南锣鼓巷.html">南锣鼓巷/什刹海</a></li>
+								<li><a href="东直门.html">东直门/雍和宫</a></li>
+							</ul>
+						<li><a href="menu.html">菜单 ▶<i class="fa fa-chevron-right" style="margin: 2px 3px 2px;"></i></a>
+						<ul>
+							<li><a href="咖啡.html">咖啡</a></li>
+							<li><a href="茶.html">茶</a></li>
+							<li><a href="甜品.html">甜品</a></li>
+							<li><a href="小吃.html">小吃</a></li>
+						</ul>	
+						<li><a href="price.html">价格</a></li>
+						<li><a href="comment.html">评论</a></li>
+					</ul>
+				<li><a href="#div2">关于我们</a></li>
+				<li><a href="#div2">联系我们</a></li>
+			</ul>
+		</div>
+	</nav>
 	<!-----------------content-box-3-------------------->
 	<section class="content-box box-3">
 		<div class="zerogrid">
-			<div class="wrap-box"><!--Start Box-->
+			<div class="wrap-box">
 				<div class="heading">
 					<div class="row">
-						<h2>地点</h2>
+						<h2>菜单 Menu</h2>
 						<select id="" onchange="window.location=this.value">
-							<option>南锣鼓巷/什刹海</option>
-							<option value="阜成门.html">阜成门/地安门</option>
-							<option value="前门.html">前门/大栅栏</option> 
-							<option value="东直门.html">东直门/雍和宫</option>
-							<option value="location.html">全部区域（二环）</option>
+							<option>全部</option>
+							<option value="茶.html">茶</option>
+							<option value="咖啡.html">咖啡</option> 
+							<option value="甜品.html">甜品</option>
+							<option value="小吃.html">小吃</option>
 						</select>
 					</div>
 				</div>
@@ -98,12 +98,13 @@
 		</div>
 	</section>
 
+
  <!-----------------content-box-4-------------------->
  <section class="content-box boxstyle-1 box-4">
 	<div class="zerogrid">
 		<div class="wrap-box">
 			<div class="row">
-				<iframe class="airtable-embed" src="https://airtable.com/embed/shr63trb2hyt3kTKS?backgroundColor=yellow&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+				<iframe class="airtable-embed" src="https://airtable.com/embed/shrHTiW1kVkb8enB9?backgroundColor=yellow&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
 			</div>
 		</div>
 	</div>
