--- a/天台胡同/咖啡.html
+++ b/天台胡同/咖啡.html
@@ -86,11 +86,11 @@
 					<div class="row">
 						<h2>菜单 Menu</h2>
 						<select id="" onchange="window.location=this.value">
-							<option>全部</option>
+							<option>咖啡</option>
 							<option value="茶.html">茶</option>
-							<option value="咖啡.html">咖啡</option> 
 							<option value="甜品.html">甜品</option>
 							<option value="小吃.html">小吃</option>
+							<option value="menu.html">全部</option> 
 						</select>
 					</div>
 				</div>
