--- a/天台胡同/homepage.html
+++ b/天台胡同/homepage.html
@@ -133,7 +133,7 @@
 		<div class="wrap-box">
 			<div class="heading2">
 				<div class="row">
-					<h2>探寻心选 Search</h2>
+					<h2>探寻心选 Explore</h2>
 				</div>
 			</div>
 		</div>
