--- a/天台胡同/homepage.html
+++ b/天台胡同/homepage.html
@@ -19,6 +19,8 @@
 	<link rel="stylesheet" href="css/menu.css">
 	<link rel="stylesheet" href="css/style.css">
 	
+	<!-- Custom Fonts -->
+	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     
 </head>
 <body>
@@ -133,7 +135,7 @@
 		<div class="wrap-box">
 			<div class="heading2">
 				<div class="row">
-					<h2>探寻心选 Explore</h2>
+					<h2>探寻心选 Search</h2>
 				</div>
 			</div>
 		</div>
@@ -305,8 +307,6 @@
 			if (isiPad) $('#menu ul').addClass('no-transition');      
 		});          
 	</script>
-	
-	
 	
 	
 </div>
