--- a/dataviz_demo/test_getjson2.html
+++ b/dataviz_demo/test_getjson2.html
@@ -25,76 +25,39 @@
 </head>
 <body>
   <div class="container">
-    <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12">
-          <h1>Airtable GetJSON</h1>
-          <div class="card card-body bg-light" style="width:100%; margin-bottom:20px;">
-              <h5>Airtable API Demo</h5>
-              <p id="welcome">Using jQuery getJSON and Airtable API for fun!</p>
-              <p id="demo">Airtable is a wonderful spreadsheet-like database with many useful features for data modeling and basic analytics. 
-              When used with other data visualization libraries, it can be a great tool for rapid prototyping.
-          </div><!-- end well -->
-          <!-- Sign and date the page, it's only polite! -->
-          <div> 
-            <button type="button" class="btn btn-success" id='get_data1'>Table</button>
-            <button type="button" class="btn btn-warning" id='get_data2'>Charts</button>
-            <button type="button" class="btn btn-info" id='clear_tables'>Remove</button>
-          </div>
-          <div class="table-responsive">
-                <!--table id="table1" width="100%" class="table table-bordered"></table-->
-          </div><!-- table responsive -->
-          <div class="table-responsive">
-                <!--table id="table2" width="100%" class="table table-bordered"></table-->
-          </div><!-- table responsive -->
-          <div class="row">
-            <div class="col-sm-12">
-                <div id="chart"></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-6">
-                <div id="chart1"></div>
-            </div>
-            <div class="col-sm-6">
-                <div id="chart2"></div>
-            </div>
-        </div><!--end row-->
-        <br>
-        <h1>Leaflet Example</h1>
             <div class="row">
               <div class="col-sm-6">
                 <form>
                   <div class="form-group">
                       <select id="filter" class="form-control form-control-sm" style="width:auto; display:inline;" onchange="place_marker()">
-                        <option value="" selected disabled>Please select</option>
-                        <option value="0">HKU</option>
-                        <option value="1">Kowloon Science Musuem</option>
-                        <option value="2">Victoria Peak</option>
-                        <option value="3">HK Cultural Center</option>
-                        <option value="4">Choi Hung</option>
-                        <option value="5">Lan Kwai Fong</option>
-                        <option value="6">CUHK</option>
-                        <option value="7">HKBU</option>
-                        <option value="8">North Point</option>
-                        <option value="9">Victoria Harbour</option>
-                        <option value="10">Mong Kok</option>
-                        <option value="11">Happy Valley</option>
+                        <option value="" selected disabled>请选择</option>
+                        <option value="0">Berry Beans</option>
+                        <option value="1">莲COFFEE&T</option>
+                        <option value="2">The Bake Shop（南锣店）</option>
+                        <option value="3">熊煮咖啡BearBrew（自在场头店）</option>
+                        <option value="4">静默咖啡Silence Coffee（有戏酒店）</option>
+                        <option value="5">静水StillWater</option>
+                        <option value="6">Soloist Coffee Co（杨梅竹店）</option>
+                        <option value="7">postpost</option>
+                        <option value="8">福叁咖啡（西兴隆街店）</option>
+                        <option value="9">致璞</option>
+                        <option value="10">候鸟咖啡</option>
+    i                   <option value="11">济安斋咖啡书吧</option>
+                        <option value="12">糖房咖啡</option>
+                        <option value="13">ty.cafe& space</option>
+                        <option value="14">iams House 新太仓店</option>
+i                       <option value="15">苦尽咖啡</option>
                       </select>
-                      <button type="button" class="btn btn-outline-primary btn-sm" id='roll_up' onclick="show_districts();">Destinations</button>
+                      <button type="button" class="btn btn-outline-primary btn-sm" id='roll_up' onclick="show_districts();">地点</button>
                       <button type="button" class="btn btn-outline-primary btn-sm" id="roll_up" onclick="clear_map();" style="
                           border-style: solid;
                           border-width: 1px;
                           border-color: #327ab7;
-                      ">Reset</button>
-                      <button type="button" class="btn btn-outline-primary btn-sm" id='roll_up' onclick="remove_map();">Remove</button>
+                      ">重置</button>
                 </div>           
                 </form>  
                 <div id="map" style="width: 100%; height: 300px"></div>
-                </div><!-- end column-->
-                <div class="col-sm-6">
-                    <div class="table-responsive">
-                        <table id="table1" width="100%" class="table table-bordered"></table>
-                    </div><!-- table responsive -->
+             
                 </div><!-- end column -->
           </div><!--end row-->
   </div><!-- container -->
