--- a/天台胡同/homepage.html
+++ b/天台胡同/homepage.html
@@ -282,7 +282,7 @@
 				<div class="col-1-2 col-footer-3">
 					<div class="wrap-col">
 						<h3 class="widget-title">订阅 Subcribe</h3>
-						<p>邮件订阅网站更新，精彩内容随时查看。Subscribe to our daly newsletter now.</p>
+						<p>邮件订阅网站更新，精彩内容随时查看。Subscribe to our newsletter now.</p>
 						<p>电子邮件 Email address:</p>
 						<form action="#" method="post">
 							<input type="text" name="your-name" value="" size="40" placeholder="Your Email" />
