--- a/天台胡同/homepage.html
+++ b/天台胡同/homepage.html
@@ -29,8 +29,8 @@
 	<link rel="stylesheet" href="css/menu.css">
 	<link rel="stylesheet" href="css/style.css">
 	
-	<!-- Custom Fonts -->
-	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<script src="js/jquery-2.1.1.js"></script>
+	<script src="js/script.js"></script>
     
 </head>
 <body>
