--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           2021/01/30
         </td>
         <td>
-          <a href="assignment01.html">Assignment 01</a>
+          <a href="assignment01/assignment01.html">Assignment 01</a>
         </td>
       </tr>
       <tr>
@@ -42,7 +42,7 @@
           2021/02/15
         </td>
         <td>
-          <a href="assignment02.html">Assignment 02</a>
+          <a href="assignment02/www/index.html">Assignment 02</a>
         </td>
       </tr>
       <tr>
