--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
         </td>
       </tr>
       <tr>
+        <td class="collapsing">
+          2021/02/28
+        </td>
         <td>
-          -
+          <a href=https://github.com/Wenjia-Song/Wenjia-Song.github.io/tree/master/assignment03>Assignment 03</a>
         </td>
         <td>-</td>
         
