--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
         <td>
           <a href=https://github.com/Wenjia-Song/Wenjia-Song.github.io/tree/master/assignment03>Assignment 03</a>
         </td>
-        <td>-</td>
+        </tr>
+        <tr>
+          <a href=https://dev-rooftop-cafe.pantheonsite.io/wp-admin/customize.php?theme=barebone&return=https%3A%2F%2Fdev-rooftop-cafe.pantheonsite.io%2Fwp-admin%2Fthemes.php%3Ftheme%3Dbarebone>Assignment 04</a>
+        </td>
+      </tr>
         
     </tbody>
   </table>
